# ctx-pack

./: Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  config.md  overview.md  protocol.md
docs/formats/: manifest.md  output.md  patch.md
docs/phases/: phase0-scaffold.md  phase1-encoding.md  phase2-discovery.md  phase3-extraction.md  phase4-pack.md  phase5-index.md  phase6-versioning.md  phase7-apply.md  phase8-finishing.md
src/: apply.rs  cli.rs  config.rs  detection.rs  discovery.rs  encoding_layer.rs  extraction.rs  index.rs  main.rs  migrate.rs  pack.rs  version.rs
src/apply/: executor.rs  reject.rs  scanner.rs
src/config/: schema.rs  validation.rs
src/detection/: binary.rs  encoding.rs
src/discovery/: builtin.rs  stdin.rs
src/encoding_layer/: anchor.rs  indent.rs  pipeline.rs  traits.rs
src/extraction/: full.rs  lines.rs  regex_extract.rs
src/index/: cache.rs  fid.rs  state.rs
src/migrate/: prefix.rs
src/pack/: manifest.rs  output.rs  prompt.rs  tree.rs
src/version/: diff.rs  patch_gen.rs  replace_gen.rs
